<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".TemperatureActivity">
    <!--
    <Button
        android:layout_alignParentTop="true"
        android:id="@+id/btn_temperature_back"
        style="?android:attr/borderlessButtonStyle"
        android:text="←"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <pl.droidsonroids.gif.GifTextView
            android:id="@+id/gtv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/background2"
            android:gravity="center"
            android:text="25 °C"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:layout_marginRight="5dp"
                android:padding="20dp"
                android:id="@+id/btn_turn_on_fan"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/my_button_border"
                android:text="@string/turn_on_fan"
                android:textColor="@color/white" />

            <Button
                android:layout_marginLeft="5dp"
                android:padding="20dp"
                android:id="@+id/btn_turn_off_fan"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/my_button_border"
                android:text="@string/turn_off_fan"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_fan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fan is OFF"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>