<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".RoomActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark">
        <TextView
            android:id="@+id/toolbar_title"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.Toolbar>
    <Button
        android:layout_alignParentTop="true"
        android:id="@+id/btn_back_home"
        style="?android:attr/borderlessButtonStyle"
        android:text="←"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/temperature" />
        <pl.droidsonroids.gif.GifTextView
            android:text="25 °C"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="50sp"
            android:id="@+id/gtv_temperature"
            android:background="@drawable/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/gas" />
        <pl.droidsonroids.gif.GifTextView
            android:text="50 rpm"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp"
            android:id="@+id/gtv_gas"
            android:background="@drawable/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/humidity" />
        <pl.droidsonroids.gif.GifTextView
            android:text="80 %"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="50sp"
            android:id="@+id/gtv_humidity"
            android:background="@drawable/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>
</ScrollView>